added tag component

--- a/public/content.html
+++ b/public/content.html
@@ -32,10 +32,8 @@
             </div>-->
             <div class="oraculum-field">
                 <div class="oraculum-title">Tags</div>
-                <div class="oraculum-input">
-                    <div class="oraculum-tags-page" id="oraculum_tags_page"></div>
-                    <div class="oraculum-tags-user" id="oraculum_tags_user"></div>
-                    <input type="text" id="oraculum_tags_user_new"/>
+                <div id="tag-component" class="oraculum-tag-component">
+                    <input type="text" size="1" />
                 </div>
             </div>
             <div class="oraculum-field">
